k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terzo
  labels:
    app.kubernetes.io/part-of: terzocloud
